Fix responsiveness issues on smaller screens, edit btns and btn container
Add webkit tap highlight.

Add margin bottom to project-name.

Adjust todo-template-popup position with fixed pixel value to fix its stuttering upon opening. Adjust grid to give more space to the btn container so that more padding space is available for todo menu btns. Adjust height and transform value.

Increase note font size.

Remove padding and font-size from reminder-content.

Add clamp to todo-btn-container for dynamic gap adjustment to fix issue with some smaller and medium sized devices. Remove padding.

Adjust todo-menu-btn border-radius and padding.

Add gap for max-width: 360px.

Add min-width to max-width: 640px for todo-template-popup to adjust to smaller screens. Fix issues on mobile Firefox where it was too wide.
Adjust positioning for 1600px

Add

--- a/src/styles.css
+++ b/src/styles.css
@@ -63,6 +63,11 @@ header > img {
   user-select: none;
 }
 
+button {
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-tap-highlight-color: transparent;
+}
+
 .hamburger-container {
   position: absolute;
   left: 24px;
@@ -241,6 +246,7 @@ nav,
 
 .project-name {
   font-size: .8rem;
+  margin-bottom: .2rem;
 }
 
 .project-name,
@@ -402,12 +408,12 @@ nav,
 
 .todo-template-popup {
   position: fixed;
-  top: 50%;
+  top: 360px;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translateX(-50%);
   width: 200px;
   min-width: 22rem;
-  height: 33rem;
+  height: 34rem;
   border-radius: 10px;
   background-color: #FFFFFF;
   box-shadow: 2px 0px 11px 0px #073b4ccc;
@@ -416,7 +422,7 @@ nav,
   display: grid;
   opacity: 0;
   animation: todo-open 0.3s forwards;
-  grid-template-rows: 3.6rem 2fr 2.2rem 4.3rem;
+  grid-template-rows: 3.6rem 2fr 3rem 4rem;
 }
 
 .todo-saved {
@@ -468,7 +474,7 @@ nav,
 }
 
 .note {
-  font-size: .9rem;
+  font-size: 1rem;
   width: 100%;
   overflow-wrap: break-word;
   margin-bottom: 0.5rem;
@@ -509,8 +515,6 @@ nav,
 }
 
 .reminder-content {
-  padding: 0.1rem 0.6rem;
-  font-size: 0.6rem;
   user-select: none;
   gap: 0.6rem;
 }
@@ -571,10 +575,9 @@ textarea {
 .todo-btn-container {
   display: flex;
   justify-content: center;
-  gap: 1.4rem;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  gap: clamp(.7rem, 1.1vw, 1.5rem);
   user-select: none;
+  margin: 7px 0;
 }
 
 .add-toDo-btn {
@@ -608,8 +611,8 @@ textarea {
 }
 
 .todo-menu-btn {
-  border-radius: 20px;
-  padding: 8px;
+  border-radius: 25px;
+  padding: 14px;
 }
 
 .todo-menu-btn:active {
@@ -805,6 +808,12 @@ textarea {
   }
 }
 
+@media (max-width: 360px) {
+  .todo-btn-container {
+    gap: 0.1rem;
+  }
+}
+
 @media (max-width: 480px) {
   .container-right {
     padding: 0 4px 4px;
@@ -863,6 +872,12 @@ textarea {
     transform: translateX(-50%);
   }
 
+  .todo-template-popup {
+    min-width: 90%;
+    /* height: 45rem;
+    top: 460px; */
+  }
+
   .notes-btn,
   .my-projects-btn {
     font-size: 1rem;
@@ -879,11 +894,13 @@ textarea {
   .add-toDo-btn > img {
     width: 1.4rem;
   }
-}
 
-@media (max-width: 1024px) {
+  .todo-btn > img {
+    width: 1.4rem;
+  }
+
   .project-list-container {
-    padding: .5rem 1rem .5rem 0.9rem;
+    gap: 0.6rem;
   }
 }
 
@@ -896,13 +913,14 @@ textarea {
   .todo-template-popup {
     min-width: 25rem;
     height: 45rem;
+    top: 460px;
   }
 
   .todo {
     min-width: 17.8rem;
   }
   
-  .todo-btn-container {
-    gap: 2.4rem;
-  }
+  /* .todo-btn-container {
+    gap: 1.5rem;
+  } */
 }
